@@ -1,3 +1,7 @@
+Tue Aug 29 22:38:54 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* init_sec_context.c (krb5_gss_init_sec_context):  Remove
+		duplicated cleanup code. 
 
 Tue Aug 29 17:48:40 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* {accept,init}_sec_context.c - Zero out the newly allocated context
